--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,7 +1,7 @@
 .page-header {
   width: 150%;
   font-size: 2rem;
-  color: #2A77AE;
+  color: #6CADDC;
   margin-bottom: -25px;
   margin-top: -30px;
   padding: 20px;
